discussion/kv_engine/156115/156115_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

open a file

Change-Id: I733f300befd5e91dcec5f2ca899540016bd72fb7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-18 16:18:13.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-18 16:19:59.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37037/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37037/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31637/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31637/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10676/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10030/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:174:39: error: use of undeclared identifier "O_CREATE" [clang-diagnostic-error]
    int logFd = open(logPath.c_str(), O_CREATE | O_TRUNC | O_WRONLY, S_IRUSR);
                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10030/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/utilities/breakpad.cc:174:39:
error: use of undeclared identifier "O_CREATE" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10030/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11597/ : FAILURE

Compile error at [2021-06-18T16:19:10.405Z] ../kv_engine/utilities/breakpad.cc:174:39:
error: ?O_CREATE? was not declared in this scope; did you mean ?O_CREAT??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11597/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11748/ : FAILURE

Compile error at [2021-06-18T16:19:22.173Z] ../kv_engine/utilities/breakpad.cc:174:39:
error: ?O_CREATE? was not declared in this scope; did you mean ?O_CREAT??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11748/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12029/ : FAILURE

Compile error at [2021-06-18T16:19:32.066Z] ../kv_engine/utilities/breakpad.cc:174:39:
error: use of undeclared identifier "O_CREATE"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12029/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19620/ : FAILURE

Compile error at [2021-06-18T16:19:36.829Z] ../kv_engine/utilities/breakpad.cc:174:39:
error: use of undeclared identifier "O_CREATE"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19620/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8623/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
